# research-percolation-nanowire

./: .gitignore  README.md  pyproject.toml
data/processed/: bridge_percolation.json  bridge_percolation_hq.json  bridge_scan.json  bridge_scan_hq.json  finite_size_scaling.json  finite_size_scaling_hq.json  fss_production.json  polydisperse.json  polydisperse_hq.json  polydisperse_hq2.json  polydisperse_production.json  threshold_validation.json  voronoi_ensemble.json
data/raw/: literature_notes.md  open_problems.md
notebooks/: 01_exploration.ipynb
paper/: main.tex  references.bib  si.tex
paper/nature/: wrapper.tex
paper/revtex/: wrapper.tex
paper/rsc/: wrapper.tex
scripts/: plot_bridge_results.py  plot_fss_production.py  run_bridge_percolation.py  run_bridge_percolation_hq.py  run_bridge_scan.py  run_bridge_scan_hq.py  run_bridge_scan_transition.py  run_finite_size_scaling.py  run_fss_hq.py  run_fss_production.py  run_polydisperse.py  run_polydisperse_hq.py  run_polydisperse_hq2.py  run_polydisperse_production.py  run_validate_threshold.py  run_voronoi_ensemble.py
src/percolation/: __init__.py  bridge.py  clusters.py  cracks.py  simulation.py  sticks.py
tests/: test_bridge.py  test_sticks.py
